fix update.yml again

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,6 +17,6 @@ jobs:
         with:
           token: ${{ secrets.GH_TOKEN_FOR_UPDATES }}
       - name: Enable Pull Request Automerge
-        run: gh pr merge --merge --auto "1"
+        run: gh pr merge --merge --auto ${{ github.event.pull_request.number }}
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN_FOR_UPDATES }}
