--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -36,6 +36,6 @@ jobs:
           retry_on: error
           timeout_seconds: 10
           command: |
-            gh pr merge --merge --auto "${{ github.event.pull_request.number }}"
+            gh pr merge --squash "${{ github.event.pull_request.number }}"
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN_FOR_UPDATES }}
