--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Auto merge commit
         uses: nick-fields/retry@v3.0.0
         with:
-          max_attemps: 3
+          max_attempts: 3
           retry_on: error
           timeout_seconds: 10
           command: |
